--- a/views/partials/reward-list.handlebars
+++ b/views/partials/reward-list.handlebars
@@ -1,7 +1,25 @@
 <div class="row">
     <div class="col s12">
-        <div class="card">
-            <p>Level {{index}} Reward</p>
+        <div class="card blue lighten-5">
+            <div class = "card-content">
+            <span class="card-title">Level {{index}} Rewards</span>
+            {{#if rewards.free.rewards}}
+            <div class="indigo lighten-5">
+                <span><strong>Free:</strong></span>
+                <p>Lore: {{rewards.free.display.lore}}</p>
+                <p>Display Item: {{rewards.free.display.item}}</p>
+                <p>Commands to Run: {{rewards.free.rewards}}</p>
+            </div>
+            {{/if}}
+            {{#if rewards.premium.rewards}}
+            <div class="indigo lighten-4">
+                <span><strong>Premium:</strong></span>
+                <p>Lore: {{rewards.premium.display.lore}}</p>
+                <p>Display Item: {{rewards.premium.display.item}}</p>
+                <p>Commands to Run: {{rewards.premium.rewards}}</p>
+            </div>
+            {{/if}}
+            </div>
         </div>
     </div>
 </div>
