sorts array, updating added

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,153 +1,159 @@
-    <div class="container formsDiv">
-        <form class="row rewardForm">
-          <div class="col s12">
-          <div class="card blue lighten-4 row">
-            <div class="card-content">
-            <span class="card-title">Free</span>
-            <div class="col s12 m4 red accent-1">
-                <span>Add item</span>
-                <div class="row">
-                    <div class="input-field col s6">
-                      <input placeholder="Item Name" type="text" class="freeItemName">
-                    </div>
-                    <div class="input-field col s6">
-                      <input placeholder="Count" type="text" class="freeItemCount">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <select class="freeItemType">
-                          <option value="minecraft">Minecraft</option>
-                          <option value="pixelmon" selected>Pixelmon</option>
-                        </select>
-                        <label>Item Source</label>
-                      </div>
-                </div>
+<div class="container formsDiv">
+  <form class="row rewardForm">
+    <div class="col s12">
+      <div class="card blue lighten-4 row">
+        <div class="card-content">
+          <span class="card-title">Free</span>
+          <div class="col s12 m4 red accent-1">
+            <span>Add item</span>
+            <div class="row">
+              <div class="input-field col s6">
+                <input placeholder="Item Name" type="text" class="freeItemName">
+              </div>
+              <div class="input-field col s6">
+                <input placeholder="Count" type="text" class="freeItemCount">
+              </div>
             </div>
-            <div class="col s12 m4 pink accent-1">
-                <span>Add Command</span>
-                <div class="row">
-                    <div class="input-field col s12">
-                      <input placeholder="Command" type="text" class="freeCommandText">
-                    </div>
-                    <div class="input-field col s6">
-                        <select class="freeCommandItemType">
-                          <option value="minecraft">Minecraft</option>
-                          <option value="pixelmon" selected>Pixelmon</option>
-                        </select>
-                        <label>Item Source</label>
-                      </div>
-                        <div class="input-field col s6">
-                      <input placeholder="Item Name" type="text" class="freeCommandItem">
-                    </div>
-                    <div class="input-field col s12">
-                      <input placeholder="Item Lore" type="text" class="freeCommandLore">
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m4 purple accent-1">
-                <span>Add Pokemon</span>
-                <div class="row">
-                    <div class="input-field col s6">
-                      <input placeholder="Pokemon" type="text" class="freePokemon">
-                    </div>
-                    <div class="input-field col s6">
-                      <input placeholder="Custom Texture" type="text" class="freeTexture">
-                    </div>
-                    <div class="input-field col s6">
-                      <input placeholder="Level" type="text" class="freeLevel">
-                    </div>
-                    <div class="input-field col s6">
-                      <input placeholder="Min IV %" type="text" class="freeMiniv">
-                    </div>
-                    <div class="input-field col s12">
-                      <input placeholder="Nature" type="text" class="freeNature">
-                    </div>
-                </div>
-            </div>
-            </div>
-          </div>
-          </div>
-          <div class="col s12">
-            <div class="card row blue lighten-4">
-              <div class="card-content">
-            <span class="card-title">Premium</span>
-            <div class="col s12 m4 red accent-1">
-                <span>Add item</span>
-                <div class="row">
-                    <div class="input-field col s6">
-                      <input placeholder="Item Name" type="text" class="premiumItemName">
-                    </div>
-                    <div class="input-field col s6">
-                      <input placeholder="Count" type="text" class="premiumItemCount">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <select class="premiumItemType">
-                          <option value="minecraft">Minecraft</option>
-                          <option value="pixelmon" selected>Pixelmon</option>
-                        </select>
-                        <label>Item Source</label>
-                      </div>
-                </div>
-            </div>
-            <div class="col s12 m4 pink accent-1">
-                <span>Add Command</span>
-                <div class="row">
-                    <div class="input-field col s12">
-                      <input placeholder="Command" type="text" class="premiumCommandText">
-                    </div>
-                    <div class="input-field col s6">
-                        <select class="premiumCommandItemType">
-                          <option value="minecraft">Minecraft</option>
-                          <option value="pixelmon" selected>Pixelmon</option>
-                        </select>
-                        <label>Item Source</label>
-                      </div>
-                        <div class="input-field col s6">
-                      <input placeholder="Item Name" type="text" class="premiumCommandItem">
-                    </div>
-                    <div class="input-field col s12">
-                      <input placeholder="Item Lore" type="text" class="premiumCommandLore">
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m4 purple accent-1">
-                <span>Add Pokemon</span>
-                <div class="row">
-                    <div class="input-field col s6">
-                      <input placeholder="Pokemon" type="text" class="premiumPokemon">
-                    </div>
-                    <div class="input-field col s6">
-                      <input placeholder="Custom Texture" type="text" class="premiumTexture">
-                    </div>
-                    <div class="input-field col s6">
-                      <input placeholder="Level" type="text" class="premiumLevel">
-                    </div>
-                    <div class="input-field col s6">
-                      <input placeholder="Min IV %" type="text" class="premiumMiniv">
-                    </div>
-                    <div class="input-field col s12">
-                      <input placeholder="Nature" type="text" class="premiumNature">
-                    </div>
-                </div>
-            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <select class="freeItemType">
+                  <option value="minecraft" selected>Minecraft</option>
+                  <option value="pixelmon">Pixelmon</option>
+                </select>
+                <label>Item Source</label>
               </div>
             </div>
           </div>
-            <div class="col s12 center">
-                <button class="refresh btn waves-effect waves-light red accent-1" type="submit">Add Reward</button>
+          <div class="col s12 m4 pink accent-1">
+            <span>Add Command</span>
+            <div class="row">
+              <div class="input-field col s12">
+                <input placeholder="Command" type="text" class="freeCommandText">
+              </div>
+              <div class="input-field col s6">
+                <select class="freeCommandItemType">
+                  <option value="minecraft" selected>Minecraft</option>
+                  <option value="pixelmon">Pixelmon</option>
+                </select>
+                <label>Item Source</label>
+              </div>
+              <div class="input-field col s6">
+                <input placeholder="Item Name" type="text" class="freeCommandItem">
+              </div>
+              <div class="input-field col s12">
+                <input placeholder="Item Lore" type="text" class="freeCommandLore">
+              </div>
             </div>
-        </form>
-        
-
+          </div>
+          <div class="col s12 m4 purple accent-1">
+            <span>Add Pokemon</span>
+            <div class="row">
+              <div class="input-field col s6">
+                <input placeholder="Pokemon" type="text" class="freePokemon">
+              </div>
+              <div class="input-field col s6">
+                <input placeholder="Custom Texture" type="text" class="freeTexture">
+              </div>
+              <div class="input-field col s6">
+                <input placeholder="Level" type="text" class="freeLevel">
+              </div>
+              <div class="input-field col s6">
+                <input placeholder="Min IV %" type="text" class="freeMiniv">
+              </div>
+              <div class="input-field col s12">
+                <input placeholder="Nature" type="text" class="freeNature">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="container">
-      <pre class = "grey lighten-4">
+    <div class="col s12">
+      <div class="card row blue lighten-4">
+        <div class="card-content">
+          <span class="card-title">Premium</span>
+          <div class="col s12 m4 red accent-1">
+            <span>Add item</span>
+            <div class="row">
+              <div class="input-field col s6">
+                <input placeholder="Item Name" type="text" class="premiumItemName">
+              </div>
+              <div class="input-field col s6">
+                <input placeholder="Count" type="text" class="premiumItemCount">
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <select class="premiumItemType">
+                  <option value="minecraft" selected>Minecraft</option>
+                  <option value="pixelmon">Pixelmon</option>
+                </select>
+                <label>Item Source</label>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 m4 pink accent-1">
+            <span>Add Command</span>
+            <div class="row">
+              <div class="input-field col s12">
+                <input placeholder="Command" type="text" class="premiumCommandText">
+              </div>
+              <div class="input-field col s6">
+                <select class="premiumCommandItemType">
+                  <option value="minecraft" selected>Minecraft</option>
+                  <option value="pixelmon">Pixelmon</option>
+                </select>
+                <label>Item Source</label>
+              </div>
+              <div class="input-field col s6">
+                <input placeholder="Item Name" type="text" class="premiumCommandItem">
+              </div>
+              <div class="input-field col s12">
+                <input placeholder="Item Lore" type="text" class="premiumCommandLore">
+              </div>
+            </div>
+          </div>
+          <div class="col s12 m4 purple accent-1">
+            <span>Add Pokemon</span>
+            <div class="row">
+              <div class="input-field col s6">
+                <input placeholder="Pokemon" type="text" class="premiumPokemon">
+              </div>
+              <div class="input-field col s6">
+                <input placeholder="Custom Texture" type="text" class="premiumTexture">
+              </div>
+              <div class="input-field col s6">
+                <input placeholder="Level" type="text" class="premiumLevel">
+              </div>
+              <div class="input-field col s6">
+                <input placeholder="Min IV %" type="text" class="premiumMiniv">
+              </div>
+              <div class="input-field col s12">
+                <input placeholder="Nature" type="text" class="premiumNature">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col s3 center">
+      <button class="addBtn btn waves-effect waves-light red accent-1" type="submit">Add Reward</button>
+    </div>
+    <div class="col s3 center">
+      <button class="clearBtn btn waves-effect waves-light red accent-1">Clear All</button>
+    </div>
+    <div class="input-field col s5 center">
+      <input placeholder="Index to Update" type="text" class="index">
+    </div>
+  </form>
+
+
+</div>
+<div class="container">
+  <pre class="grey lighten-4">
         <code>{{stringified}}</code>
       </pre>
-      {{#each rewardsList as |reward|}}
-      {{> reward-list}}
-      {{/each}}
-    </div>
+  {{#each rewardsList as |reward|}}
+  {{> reward-list}}
+  {{/each}}
+</div>
