clear all functionality

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -139,11 +139,11 @@
     <div class="col s3 center">
       <button class="addBtn btn waves-effect waves-light red accent-1" type="submit">Add Reward</button>
     </div>
-    <div class="col s3 center">
-      <button class="clearBtn btn waves-effect waves-light red accent-1">Clear All</button>
-    </div>
     <div class="input-field col s5 center">
       <input placeholder="Index to Update" type="text" class="index">
+    </div>
+    <div class="col s3 center">
+      <button class="clearBtn btn waves-effect waves-light red accent-1" type="button">Clear All</button>
     </div>
   </form>
 
