--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <div class="container formsDiv">
   <form class="row rewardForm">
     <div class="col s12">
-      <div class="card blue lighten-4 row">
+      <div class="card blue lighten-2 row">
         <div class="card-content">
           <span class="card-title">Free</span>
           <div class="col s12 m4 red accent-1">
@@ -69,7 +69,7 @@
       </div>
     </div>
     <div class="col s12">
-      <div class="card row blue lighten-4">
+      <div class="card row blue lighten-2">
         <div class="card-content">
           <span class="card-title">Premium</span>
           <div class="col s12 m4 red accent-1">
@@ -136,20 +136,33 @@
         </div>
       </div>
     </div>
-    <div class="col s3 center">
-      <button class="addBtn btn waves-effect waves-light red accent-1" type="submit">Add Reward</button>
-    </div>
-    <div class="input-field col s5 center">
+    <div class="col s12 blue lighten-2 center">
+      <div class="row center">
+    <div class="input-field col s3 center">
       <input placeholder="Index to Update" type="text" class="index">
     </div>
+      </div>
+    <div class="row center">
     <div class="col s3 center">
-      <button class="clearBtn btn waves-effect waves-light red accent-1" type="button">Clear All</button>
+      <button class="addBtn btn waves-effect waves-light purple darken-1" type="submit">Add Reward</button>
+    </div>
+    <div class="col s3 center">
+      <button class="importBtn btn waves-effect waves-light purple darken-1" type="button">Import JSON</button>
+    </div>
+    <div class="col s3 center">
+      <button class="viewBtn btn waves-effect waves-light purple darken-1" type="button">View/Copy JSON</button>
+    </div>
+    <div class="col s3 center">
+      <button class="clearBtn btn waves-effect waves-light red accent-3" type="button">Clear All</button>
+    </div>
+    </div>
+
     </div>
   </form>
 
 
 </div>
-<div class="container">
+<div class="container jsonView hide">
   <pre class="grey lighten-4">
         <code>{{stringified}}</code>
       </pre>
