--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -164,9 +164,13 @@
 </div>
 <div class="container row">
   <div class="col s12 jsonView hide">
-    <pre class="grey lighten-4">
-        <code>{{stringified}}</code>
+    <div class="row">
+    <pre class="grey lighten-4 col s12">
+      <button class="copyBtn right btn waves-effect purple darken-1">Copy</button>
+        <code class="jsonText">{{stringified}}</code>
       </pre>
+
+    </div>
   </div>
   <div class="col s12 importView hide">
     <form class="row grey lighten-4 importForm">
