--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -165,9 +165,9 @@
 <div class="container row">
   <div class="col s12 jsonView hide">
     <div class="row">
-    <pre class="grey lighten-4 col s12">
       <button class="copyBtn right btn waves-effect purple darken-1">Copy</button>
-        <code class="jsonText">{{stringified}}</code>
+    <pre class="col s10 center">
+        <textarea class="grey lighten-4 jsonText materialize-textarea">{{stringified}}</textarea>
       </pre>
 
     </div>
